Applied "spacelab" theme from bootswatch.com Added front html and routes for contact form

--- a/views/about.jade
+++ b/views/about.jade
@@ -1,4 +1,6 @@
 extends layout
 
 block content
-    h3 This is the about page
+    .container
+        .page-header
+            h3 This is the about page
