--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -1,6 +1,6 @@
 body
   padding 50px
-  min-height 2000px
+  min-height 800px /*it was 2000, why?*/
   padding-top 70px
   /*font 14px "Lucida Grande", Helvetica, Arial, sans-serif*/
 
@@ -32,26 +32,12 @@ a
       width 228px
 
 
-
-  /*.affix-top,.affix{*/
-    /*position: static;*/
-  /*}*/
-
-  /*@media (min-width: 979px) {*/
-    /*#sidebar.affix-top {*/
-      /*position: static;*/
-      /*margin-top:30px;*/
-      /*width:228px;*/
-    /*}*/
-
-    /*#sidebar.affix {*/
-      /*position: fixed;*/
-      /*top:70px;*/
-      /*width:228px;*/
-    /*}*/
-  /*}*/
-
-  /*#sidebar li.active {*/
-    /*border:0 #eee solid;*/
-    /*border-right-width:4px;*/
-  /*}*/
+/*footer*/
+  /*color #666*/
+  /*background #222*/
+  /*padding 17px 0 18px 0*/
+  /*border-top 1px solid #000*/
+  /*.a*/
+    /*color #999*/
+  /*.a:hover*/
+    /*color #efefef*/
