--- a/views/layout.jade
+++ b/views/layout.jade
@@ -51,6 +51,15 @@ html(lang='en')
                                 a(href='/setlocale/en') English
                 // .nav-collapse
         block content
+            footer
+                .container
+                    p.pull-right
+                        a(href='#') Back to top
+                    p
+                        | &copy; 2014 Company, Inc. &middot;
+                        a(href='#') Privacy
+                        |  &middot;
+                        a(href='#') Terms
         // Bootstrap core JavaScript
         // ==================================================
         // Placed at the end of the document so the pages load faster
