Affix is now set with no additional js file Added text (and a few translations) and real photos for demo reasons

--- a/views/about.jade
+++ b/views/about.jade
@@ -2,5 +2,12 @@ extends layout
 
 block content
     .container
-        .page-header
-            h3 This is the about page
+        .row
+            .page-header
+                h3 About Alfachem
+            .col-md-3
+                img(src="http://placehold.it/250x250", alt="")
+            .col-md-9
+                p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at elit elementum, viverra magna sed, fringilla metus. Nam nec nibh dolor. Quisque finibus, diam sit amet eleifend rutrum, purus velit iaculis tellus, in rutrum justo augue et erat. Maecenas pellentesque, nisi id fringilla sagittis, erat mauris fermentum odio, nec rhoncus nunc libero at purus. Quisque laoreet ante erat, vitae hendrerit odio pretium quis. Morbi elementum orci leo. Nunc pellentesque eros a nisl molestie, quis ullamcorper sem facilisis. Aenean lobortis ante et metus aliquet faucibus. Nunc sit amet augue sed diam ultrices vehicula id non urna.
+                p Morbi convallis accumsan lorem ut rhoncus. Integer tempus pulvinar tincidunt. Suspendisse vel convallis nibh, eget congue diam. Aliquam sapien ipsum, porttitor ut mollis quis, interdum ac est. Vivamus dignissim ex a felis elementum fringilla. Suspendisse at feugiat turpis. Suspendisse vehicula, libero ut molestie bibendum, lectus est rutrum nisl, sit amet finibus dui lacus vitae nunc. Nam vitae elit venenatis, posuere neque nec, dignissim ex. Suspendisse potenti.
+                p Mauris nec ligula odio. Vivamus non efficitur felis. Donec eleifend purus turpis, id rutrum dui hendrerit quis. Sed vulputate ex erat. Curabitur ac semper ligula, sit amet sodales ante. Cras sed felis pellentesque, vulputate quam nec, iaculis metus. Fusce finibus orci nunc, in congue est elementum vitae. Curabitur non purus sapien. Quisque venenatis risus turpis, non placerat orci feugiat sed. Duis vitae felis sed est convallis hendrerit. Fusce ac tellus et nibh facilisis imperdiet. Sed a odio vitae nunc auctor tempus. Sed ut placerat ipsum, consectetur malesuada eros. Integer eros turpis, aliquet a felis a, commodo facilisis arcu. Morbi id odio quis tortor pellentesque lobortis.
