--- a/views/index.jade
+++ b/views/index.jade
@@ -4,55 +4,64 @@ block content
     .container
         .row
             .col-md-8
-                img(src="http://placehold.it/900x350" alt="").img-responsive.img-rounded
+                //img(src="http://placehold.it/900x350" alt="").img-responsive.img-rounded
+                img(src="http://st.depositphotos.com/1066655/2272/i/950/depositphotos_22722857-Paint-brushes.jpg" alt="").img-responsive.img-rounded
             .col-md-4
-            h1= __('Hello')
-            p This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!
-            a(href="#").btn.btn-primary.btn-lg Call to Action!
+            h1= __('Industrial Chemicals')
+            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nunc tellus, fringilla at lobortis vitae, gravida eu metus. Vestibulum faucibus, orci finibus egestas egestas, ipsum nulla tempus ex, in semper lacus urna at lectus. Proin vel velit eget felis malesuada placerat non a sapien.
+            p Integer vel ex in leo elementum tincidunt id ut mi. Proin in est sapien. Aliquam ut tempus sapien, sit amet dapibus lorem. Cras a tortor mollis, accumsan odio vitae, condimentum tortor. Duis vel lectus lacus. Donec finibus pretium sem non imperdiet. Praesent id lectus sem. Nunc placerat justo urna, at imperdiet magna dapibus quis. Morbi sit amet lacinia metus.
+            //a(href="#").btn.btn-primary.btn-lg Call to Action!
 
         hr
 
         .row.text-center
             .col-md-3.col-sm-6.hero-feature
-                .thumbnail
-                    img(src="http://placehold.it/800x500", alt="")
-                    .caption
-                        h3 Feature Label
-                        p
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        p
-                            a(href="#").btn.btn-primary Buy Now!
-                            a(href="#").btn.btn-default More Info
+                a(href="products#coatings")
+                    .thumbnail
+                        //img(src="http://placehold.it/800x500", alt="")
+                        img(src="http://static3.depositphotos.com/1001414/132/i/950/depositphotos_1329848-Samples-of-wood-coatings.jpg", alt="", style="width:250px;height:170px").img-rounded
+                        .caption
+                            h3 Coatings
+                            //p
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            //p
+                                a(href="#").btn.btn-default More Info
 
             .col-md-3.col-sm-6.hero-feature
-                .thumbnail
-                    img(src="http://placehold.it/800x500", alt="")
-                    .caption
-                        h3 Feature Label
-                        p
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        p
-                            a(href="#").btn.btn-primary Buy Now!
-                            a(href="#").btn.btn-default More Info
+                a(href="products#adhesives")
+                    .thumbnail
+                        //img(src="http://placehold.it/800x500", alt="")
+                        img(src="http://st.depositphotos.com/2222068/2500/i/950/depositphotos_25004237-Master-puts-adhesive.jpg", alt="", style="width:250px;height:170px").img-rounded
+                        .caption
+                            h3 Adhesives
+                            //p
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            //p
+                                a(href="#").btn.btn-primary Buy Now!
+                                a(href="#").btn.btn-default More Info
 
             .col-md-3.col-sm-6.hero-feature
-                .thumbnail
-                    img(src="http://placehold.it/800x500", alt="")
-                    .caption
-                        h3 Feature Label
-                        p
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        p
-                            a(href="#").btn.btn-primary Buy Now!
-                            a(href="#").btn.btn-default More Info
+                a(href="products#construction")
+                    .thumbnail
+                        //img(src="http://placehold.it/800x500", alt="")
+                        img(src="http://st.depositphotos.com/1004757/1382/i/950/depositphotos_13821736-Road-under-reconstruction.jpg", alt="", style="width:250px;height:170px").img-rounded
+                        .caption
+                            h3 Construction
+                            //p
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            //p
+                                a(href="#").btn.btn-primary Buy Now!
+                                a(href="#").btn.btn-default More Info
 
             .col-md-3.col-sm-6.hero-feature
-                .thumbnail
-                    img(src="http://placehold.it/800x500", alt="")
-                    .caption
-                        h3 Feature Label
-                        p
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        p
-                            a(href="#").btn.btn-primary Buy Now!
-                            a(href="#").btn.btn-default More Info
+                a(href="products#specialties")
+                    .thumbnail
+                        //img(src="http://placehold.it/800x500", alt="")
+                        img(src="http://static3.depositphotos.com/1006649/242/i/950/depositphotos_2422718-Makeup-powder.jpg", alt="", style="width:250px;height:170px").img-rounded
+                        .caption
+                            h3 Specialties
+                            //p
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            //p
+                                a(href="#").btn.btn-primary Buy Now!
+                                a(href="#").btn.btn-default More Info
