--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html(lang='en')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         meta(name='description', content='')
         meta(name='author', content='')
-        link(rel='icon', href='#{pathToAssets}/docs/favicon.ico')
+        link(rel='icon', href='#/img/favicon.ico')
         title Alfachem
         // Bootstrap core CSS
         link(href='/components/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
@@ -51,18 +51,17 @@ html(lang='en')
                                 a(href='/setlocale/en') English
                 // .nav-collapse
         block content
-            footer
-                .container
-                    p.pull-right
-                        a(href='#') Back to top
-                    p
-                        | &copy; 2014 Company, Inc. &middot;
-                        a(href='#') Privacy
-                        |  &middot;
-                        a(href='#') Terms
+            //footer
+            //    .container
+            //        p.pull-right
+            //            a(href='#') Back to top
+            //        p
+            //            | &copy; 2014 Company, Inc. &middot;
+            //            a(href='#') Privacy
+            //            |  &middot;
+            //            a(href='#') Terms
         // Bootstrap core JavaScript
         // ==================================================
         // Placed at the end of the document so the pages load faster
         script(src='/components/jquery/dist/jquery.min.js')
         script(src='/components/bootstrap/dist/js/bootstrap.min.js')
-        script(src='/js/alfachem.js')
