--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -27,8 +27,8 @@ a
       margin-top 30px
       width 228px
     .affix
-      position fixed
-      top 70px
+      position static
+      top 30px
       width 228px
 
 
